# featherlog

./: README.md  pyproject.toml
docs/: Makefile  conf.py  index.md
featherlog/: __init__.py
tests/: test_featherlog.py
tests/__snapshots__/: test_featherlog.ambr
