[project]
name = "featherlog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=8.2.3",
    "syrupy>=4.9.1",
]
